--- a/T4/Tarea_4.ipynb
+++ b/T4/Tarea_4.ipynb
@@ -3230,7 +3230,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
